# dyno_app

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  README.md  check.sh
.cargo/: config.toml
examples/: gauges.rs  images.rs  serial_com.rs
src/: app.rs  condition.rs  config.rs  constant.rs  control.rs  controller.rs  debug.rs  lib.rs  main.rs  paths.rs  startup.rs  state.rs  window.rs
src/api/: connection.rs  handler.rs  mod.rs  session.rs
src/service/: api.rs  codec.rs  mod.rs  mqtt.rs  ports.rs  serial.rs  ws.rs
src/service/api/: connection.rs  dyno.rs  mod.rs  user.rs
src/service/serial/: impl_serial.rs  mod.rs  ports.rs
src/widgets/: button.rs  common.rs  gauges.rs  hyperlink.rs  images.rs  logger.rs  mod.rs  msgdialog.rs  opener.rs  ploter.rs  popup.rs  realtime_plot.rs  toast.rs  toggle.rs
src/widgets/barcodes/: barcode_widget.rs  datamatrix_widget.rs  qrcode_widget.rs
src/widgets/segment_display/: metrics.rs  mod.rs  segments.rs  widget.rs
src/windows/: about.rs  auth.rs  confirm_quit.rs  confirm_unsaved.rs  debug.rs  help.rs  logger.rs  mod.rs  open_server.rs  save_server.rs  setting.rs  stream_server.rs
utils/: Cargo-release.toml  Dockerfile  DynotestApp.desktop  build_deb.sh  check.sh  tests.sh
