# [PROJECT_DIR]/dynotest/Cargo.toml
[package]
name = "dynotest_app"
description = "Dynotest GUI Application"
version = "0.0.1"
authors = ["Rizal Achmad Pahlevi <echo 'cml6YWwuYWhtYWRwQGdtYWlsLmNvbQo=' | base64 -d>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/dynotestpolije/dyno_app"

[features]
default = ["images"]
images = ["dep:image"]
# use_plotter = ["dep:plotters"]
barcodes = ["dep:barcoders", "dep:datamatrix", "dep:qrcode"]
dbg_log  = []


[dependencies]

directories         = { version = "^5" }
serialport          = { version = "^4"  }
crossbeam-channel   = { version = "^0.5" }
url = "2.3.1"
futures = "0.3.28"

[dependencies.rfd]
version = "^0.11"
default-features = false
features = ["gtk3"]

[dependencies.itertools]
version = "^0.10"
default-features = false
features = ["use_std"]

[dependencies.eframe]
path = "egui/crates/eframe"
default-features = true
features = ["persistence"]

[dependencies.dyno_core]
# if in release change to git url main branch
# git = "https://github.com/dynotestpolije/dyno_types.git"
# branch = "main" 
path = "../dyno_core"
features = ["frontend"]

[dependencies.barcoders]
version = "^1"
optional = true

[dependencies.datamatrix]
version = "^0.3"
optional = true
default-features = false

[dependencies.qrcode]
version = "^0.12"
optional = true
default-features = false

[dependencies.image]
version = "^0.24"
optional = true
default-features = false
features = ["ico", "jpeg", "png", "rgb"]



