# [PROJECT_DIR]/dynotest/Cargo.toml
[package]
name = "dynotest_app"
description = "Dynotest GUI Application"
version = "0.0.1"
authors = ["Rizal Achmad Pahlevi <echo 'cml6YWwuYWhtYWRwQGdtYWlsLmNvbQo=' | base64 -d>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/dynotestpolije/dyno_app"

[features]
default = ["images"]
images = ["dep:image"]
# use_plotter = ["dep:plotters"]
dbg_log  = []


[dependencies]

directories  = { version = "5.0.1" }
serialport   = { version = "4.2.1" }
url          = { version = "2.3.1" }
futures      = { version = "0.3"}

[dependencies.rfd]
version = "0.11"
default-features = false
features = ["gtk3"]

[dependencies.itertools]
version = "0.10.5"
default-features = false
features = ["use_std"]

[dependencies.eframe]
path = "egui/crates/eframe"
default-features = true
features = ["persistence"]

[dependencies.dyno_core]
# if in release change to git url main branch
# git = "https://github.com/dynotestpolije/dyno_types.git"
# branch = "main" 
path = "../dyno_core"
features = ["frontend", "checksum", "use_async", "use_excel", "use_log"]

[dependencies.image]
version = "0.24"
optional = true
default-features = false
features = ["ico", "jpeg", "png", "rgb"]



